# agentlens

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  publish-sdk.yml  sdk-ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/models/: api_key.py  common.py  evaluation.py  project.py  run.py  security_finding.py  trace_step.py
backend/app/repositories/: mongo.py  mongo_api_key_repository.py  mongo_evaluation_repository.py  mongo_project_repository.py  mongo_run_repository.py  mongo_security_repository.py  mongo_trace_repository.py
backend/app/schemas/: common.py  evaluation.py  project.py  run.py  security.py  security_update.py  trace.py
backend/app/services/: auth_service.py  evaluation_service.py  masking_service.py  project_service.py  security_scanner.py  security_service.py  trace_service.py
backend/tests/: test_evaluation_service.py  test_masking_service.py  test_security_scanner.py
docs/: api-reference.md  architecture.md  deployment.md  getting-started.md  sdk-python.md  sdk-release.md  security-model.md
examples/openai-agents/: main.py
examples/security-demo/: main.py
examples/simple-agent/: main.py
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/evaluations/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/security/: page.tsx
frontend/lib/: api.ts  project-selection.ts  types.ts
scripts/: bootstrap_demo.py
sdk/python/: README.md  pyproject.toml
sdk/python/agentlens/: __init__.py  client.py  context.py  decorators.py  exporters.py  masking.py  types.py
sdk/python/agentlens/integrations/: __init__.py  openai_agents.py
sdk/python/tests/: test_masking.py  test_openai_agents_integration.py
(+15 files in other folders)
